<resources>
    <string name="app_name">Pilulier Automatique</string>
    <string name="Page0Titre">Boujour,\n
    Pour accéder a  votre Posologie,\n
    veuillez vous indentifiez.
    </string>

    <string name="title_activity_posologie">Posologie</string>

    <string name="Matin1" translatable="false">1</string>
    <string name="Matin2" translatable="false">0</string>
    <string name="Matin3" translatable="false">1</string>
    <string name="Matin4" translatable="false">1</string>
    <string name="Matin5" translatable="false">1</string>

    <string name="Midi1" translatable="false">1</string>
    <string name="Midi2" translatable="false">1</string>
    <string name="Midi3" translatable="false">0</string>
    <string name="Midi4" translatable="false">1</string>
    <string name="Midi5" translatable="false">1</string>

    <string name="Soir1" translatable="false">1</string>
    <string name="Soir2" translatable="false">1</string>
    <string name="Soir3" translatable="false">1</string>
    <string name="Soir4" translatable="false">1</string>
    <string name="Soir5" translatable="false">1</string>

    <string name="Nuit1" translatable="false">1</string>
    <string name="Nuit2" translatable="false">1</string>
    <string name="Nuit3" translatable="false">1</string>
    <string name="Nuit4" translatable="false">0</string>
    <string name="Nuit5" translatable="false">1</string>

    <string name="ACO1" translatable="false">1</string>
    <string name="ACO2" translatable="false">1</string>
    <string name="ACO3" translatable="false">1</string>
    <string name="ACO4" translatable="false">1</string>
    <string name="ACO5" translatable="false">1</string>
    <string name="Nom" translatable="false">Vide</string>
    <string name="Bouton">Validé</string>
    <string name="title_activity_main2">" "</string>
</resources>
