<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.djambae.pilulierautomatique.Posologie">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="Bienvenue,"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="Matin"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Matin1"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Matin2"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Matin3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Matin4"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Matin5"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="Midi"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Midi1"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Midi2"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Midi3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Midi4"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Midi5"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="Soir"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Soir1"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Soir2"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Soir3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Soir4"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Soir5"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="Nuit"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Nuit1"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Nuit2"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Soir3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Nuit4"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/Nuit5"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="Au cas où  "
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/ACO1"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/ACO2"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/ACO3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/ACO4"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/ACO5"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="211dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ubuntu_medium"
        android:onClick="Lancement"
        android:text="Lancer la distribution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
